--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </div>
 
     <!--question 15-->
-    <div class="flex-grow">
+    <div class="flex-container">
         <div class="flex-grow1"> sailor moon</div>
         <div class="flex-grow2"> sailor venus</div>
         <div class="flex-grow3"> sailor mars</div>
